Adding project icon to readme and examples. Adding animated gif to readme. Icon by John Coles Key.
Co-authored-by: John Coles Key

--- a/examples/example-app.html
+++ b/examples/example-app.html
@@ -3,6 +3,11 @@
 <html>
     <head></head>
     <body>
-        Main app loaded!
+        <center>
+            <img src="../icon.svg" height="300" width="300"></img>
+        </center>
+        <center>
+            App loaded!
+        </center>
     </body>
 </html>
