--- a/examples/example-dynamic-splashscreen.html
+++ b/examples/example-dynamic-splashscreen.html
@@ -3,7 +3,12 @@
 <html>
     <head></head>
     <body>
-        Loading...<span id="status"></span>
+        <center>
+            <img src="../icon.svg" width="200" height="200"></img>
+        </center>
+        <center>
+            Loading...<span id="status"></span>
+        </center>
     </body>
     <script>
         // Listen for data from browser process and update splashscreen
